fix: colors added, cut off date component added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,10 +39,20 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --color-teal-light: var(--teal-light);
-  --color-teal-accent: var(--teal-accent);
-  --color-indigo-accent: var(--indigo-accent);
-  --color-indigo-light: var(--indigo-light);
+  --color-purple-50: var(--purple-50);
+  --color-violet-650: var(--violet-650);
+  --color-emerald-25: var(--emerald-25);
+  --color-teal-450: var(--teal-450);
+  --color-slate-450: var(--slate-450);
+  --color-blue-450: var(--blue-450);
+  --color-indigo-650: var(--indigo-650);
+  --color-neutral-850: var(--neutral-850);
+  --color-neutral-550: var(--neutral-550);
+  --color-slate-350: var(--slate-350);
+  --tracking-1: 0.063rem;
+  --leading-12: 0.75rem;
+  --text-26: 1.625rem;
+  --leading-24: 1.5rem;
 }
 
 :root {
@@ -78,10 +88,16 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --teal-light: oklch(96.66% 0.0213 186.03);
-  --teal-accent: oklch(72.8% 0.1346 177.35);
-  --indigo-accent: oklch(50.44% 0.2903 285.87);
-  --indigo-light: oklch(94.02% 0.035 303.81);
+  --purple-50: #f0e6ff;
+  --violet-650: #6707fd;
+  --teal-450: #00c2a6;
+  --emerald-25: #e5f9f6;
+  --blue-450: #3e8cff;
+  --slate-450: #777e90;
+  --indigo-650: #4323ff;
+  --neutral-850: #141416;
+  --neutral-550: rgba(20, 20, 22, 0.8);
+  --slate-350: #cdd4e5;
 }
 
 .dark {
@@ -124,5 +140,16 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .bg-electric-blue-gradient {
+    background: linear-gradient(0deg, rgba(62, 140, 255, 0.25) 0%, rgba(62, 140, 255, 0.25) 100%),
+      #fff;
+  }
+  .bg-soft-blue-gradient {
+    background: linear-gradient(0deg, rgba(62, 140, 255, 0.1) 0%, rgba(62, 140, 255, 0.1) 100%),
+      #fff;
   }
 }
